Fix viewport and container margin on mobile

--- a/src/scss/overview.scss
+++ b/src/scss/overview.scss
@@ -17,3 +17,9 @@
 h1 {
   text-align: center;
 }
+
+@media (max-width: 601px) {
+  .container {
+    margin: 0;
+  }
+}
